<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_item_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/degraded">

    <ImageView
        android:id="@+id/task_icon_iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_icon_visible"
        android:contentDescription="@string/task_icon_cd" />

    <TextView
        android:id="@+id/task_name_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:singleLine="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/task_icon_iv"
        app:layout_constraintTop_toTopOf="@+id/task_icon_iv"
        tools:text="Rugby match" />

    <TextView
        android:id="@+id/task_category_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/task_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/task_name_tv"
        tools:text="Sport games" />


    <TextView
        android:id="@+id/start_time_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_category_name_tv" />

    <TextView
        android:id="@+id/current_time_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time_label"
        app:layout_constraintEnd_toStartOf="@+id/task_duration_label_tv"
        app:layout_constraintStart_toEndOf="@+id/start_time_label_tv"
        app:layout_constraintTop_toTopOf="@+id/start_time_label_tv" />

    <TextView
        android:id="@+id/task_duration_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/task_duration_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_time_label_tv" />

    <TextView
        android:id="@+id/start_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/start_time_label_tv"
        app:layout_constraintStart_toStartOf="@+id/start_time_label_tv"
        app:layout_constraintTop_toBottomOf="@+id/start_time_label_tv"
        tools:text="02:30" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/current_time_label_tv"
        app:layout_constraintStart_toStartOf="@+id/current_time_label_tv"
        app:layout_constraintTop_toTopOf="@+id/start_time_tv" />

    <ImageView
        android:id="@+id/task_notification_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/task_duration_tv"
        app:layout_constraintStart_toStartOf="@+id/task_duration_label_tv"
        app:layout_constraintTop_toTopOf="@+id/task_duration_tv"
        app:srcCompat="@drawable/ic_notifications_active_24"
        android:contentDescription="@string/notification_image_cd" />


    <TextView
        android:id="@+id/task_duration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/task_duration_label_tv"
        app:layout_constraintStart_toEndOf="@+id/task_notification_iv"
        app:layout_constraintTop_toTopOf="@+id/start_time_tv"
        tools:text="02:30" />


    <ImageView
        android:id="@+id/play_pause_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/stop_iv"
        app:layout_constraintTop_toTopOf="@+id/stop_iv"
        app:srcCompat="@drawable/ic_pause_24"
        android:contentDescription="@string/play_pause_image_cd" />

    <ImageView
        android:id="@+id/stop_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time_tv"
        app:srcCompat="@drawable/ic_stop_24"
        android:contentDescription="@string/stop_image_cd" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>